--- a/styles.css
+++ b/styles.css
@@ -64,3 +64,18 @@ header > h1 {
     font-weight: bold;
     font-family: Asap, sans-serif;
 }
+
+.choices {
+    margin: 50px 0;
+    text-align: center;
+}
+
+.choice {
+    border: 4px solid white;
+    border-radius: 50%;
+    margin: 0 20px;
+    padding: 10px;
+    display: inline-block;
+
+
+}
