--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,8 @@ header {
     padding: 20px;
 }
 
+
+
 header > h1 {
     color: #292c34;
     text-align: center;
@@ -91,4 +93,19 @@ header > h1 {
     font-weight: bold;
     font-size: 20px;
     margin-top: 20px;
+}
+
+.green-glow {
+    border: 4px solid #4dcc7d;
+    box-shadow: 0 0 10px #31b43a;
+}
+
+.red-glow {
+    border: 4px solid #fc121b;
+    box-shadow: 0 0 10px #d01115;    
+}
+
+.grey-glow {
+    border: 4px solid #454547;
+    box-shadow: 0 0 10px #25292b;    
 }
